# ddns-updater

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  go.mod  main.go
.github/workflows/: docker-publish.yml
config/: config.json
src/: main.rs
